WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
REOPENED
299949
Crash under VTIsHardwareDecodeSupported
https://bugs.webkit.org/show_bug.cgi?id=299949
Summary
Crash under VTIsHardwareDecodeSupported
Per Arne Vollan
Reported
2025-10-01 04:40:54 PDT
Crash under VTIsHardwareDecodeSupported
Attachments
Add attachment
proposed patch, testcase, etc.
Per Arne Vollan
Comment 1
2025-10-01 04:40:57 PDT
<
rdar://problem/157511010
>
Per Arne Vollan
Comment 2
2025-10-01 04:45:15 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/51620
EWS
Comment 3
2025-10-02 01:51:40 PDT
Committed
300866@main
(b9ce45a962bc): <
https://commits.webkit.org/300866@main
> Reviewed commits have been landed. Closing PR #51620 and removing active labels.
EWS
Comment 4
2025-10-06 10:50:13 PDT
Committed
297297.513@safari-7622-branch
(4789e6f8ad8d): <
https://commits.webkit.org/297297.513@safari-7622-branch
> Reviewed commits have been landed. Closing PR #3753 and removing active labels.
WebKit Commit Bot
Comment 5
2025-10-07 01:11:26 PDT
Re-opened since this is blocked by
bug 300304
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug