Crash under VTIsHardwareDecodeSupported https://bugs.webkit.org/show_bug.cgi?id=299949 rdar://157511010

Reviewed by Youenn Fablet.

We are receiving reports about crashes under VTIsHardwareDecodeSupported. The reports indicate that the crashes are
due to leaks related to IOKit connections. VTIsHardwareDecodeSupported is being called in response to the
UpdateGPUProcessPreferences message, and it's possible that this message is being sent many times. This patch
speculatively addresses the issue by calling VTIsHardwareDecodeSupported only once, which should be sufficient.

* Source/WebCore/platform/graphics/cocoa/VP9UtilitiesCocoa.mm:
(WebCore::vp9HardwareDecoderAvailable):
(WebCore::vp9HardwareDecoderAvailableInProcess):

Canonical link: https://commits.webkit.org/300866@main