Source/WebCore/platform/graphics/cocoa/VP9UtilitiesCocoa.mm
@@ -196,7 +196,12 @@ bool vp9HardwareDecoderAvailable()
     if (auto vp9HardwareDecoderOverride = VP9TestingOverrides::singleton().vp9HardwareDecoderEnabledOverride())
         return *vp9HardwareDecoderOverride;
 
-    return canLoad_VideoToolbox_VTIsHardwareDecodeSupported() && VTIsHardwareDecodeSupported(kCMVideoCodecType_VP9);
+    static dispatch_once_t onceToken;
+    static bool decoderAvailable;
+    dispatch_once(&onceToken, ^{
+        decoderAvailable = canLoad_VideoToolbox_VTIsHardwareDecodeSupported() && VTIsHardwareDecodeSupported(kCMVideoCodecType_VP9);
+    });
+    return decoderAvailable;
 }
 
 bool vp9HardwareDecoderAvailableInProcess()
@@ -204,7 +209,12 @@ bool vp9HardwareDecoderAvailableInProcess()
     if (auto disabledForTesting = VP9TestingOverrides::singleton().hardwareDecoderDisabled())
         return !*disabledForTesting;
 
-    return canLoad_VideoToolbox_VTIsHardwareDecodeSupported() && VTIsHardwareDecodeSupported(kCMVideoCodecType_VP9);
+    static dispatch_once_t onceToken;
+    static bool decoderAvailable;
+    dispatch_once(&onceToken, ^{
+        decoderAvailable = canLoad_VideoToolbox_VTIsHardwareDecodeSupported() && VTIsHardwareDecodeSupported(kCMVideoCodecType_VP9);
+    });
+    return decoderAvailable;
 }
 
 static bool isVP9CodecConfigurationRecordSupported(const VPCodecConfigurationRecord& codecConfiguration)
